packages/optimism.io/src/navigation/Navigation.module.css
.componentBody {
	font-family: 'Roboto', sans-serif;
	line-height: 1.6;
	margin: 0;
}
.componentBody ul {
  margin: 0;
  padding: 0;
  list-style: none;
}


.componentBody h2,
.componentBody h3,
.componentBody a {
	color: #F01A37;
}

.componentBody a {
	text-decoration: none;
}



.logo {
	margin: 0;
	font-size: 1.45em;
}

.mainNav {
	margin-top: 5px;

}
.logo a,
.mainNav a {
	padding: 10px 15px;
	text-transform: uppercase;
	text-align: center;
	display: block;
}


.header {
	padding-top: .5em;
	padding-bottom: .5em;
	background-color: transparent;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}


/* ================================= 
  Media Queries
==================================== */




@media (min-width: 769px) {
	.header,
	.mainNav {
		display: flex;
	}
	.header {
		flex-direction: column;
		align-items: center;
    	.header{
		width: 80%;
		margin: 0 auto;
		max-width: 1150px;
	}
	}

}

@media (min-width: 1025px) {
	.header {
		flex-direction: row;
		justify-content: space-between;
	}

}

